syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "category-service.proto";
import "common.proto";

package net.proto;

option java_multiple_files = true;
option java_package = "dev.proto";

service CategoryGrpcQueryService {

  rpc ListCategories (google.protobuf.Empty) returns (ListCategoriesResponse) {
      option (google.api.http) = { get: "/api/v1/categories" };
  }
  rpc ListCategoriesPaginated (PaginationRequest) returns (ListCategoriesResponse) {
      option (google.api.http) = { get: "/api/v1/categories" };
  }
  rpc GetCategory (GetCategoryRequest) returns (CategoryProto) {
      option (google.api.http) = { get: "/api/v1/categories/{categoryId}" };
  }
}

message ListCategoriesResponse {
  repeated CategoryProto categories = 1;
}

message GetCategoryRequest {
  string categoryId = 1;
}
